--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Kanban Board</title>
+  <title>Boardi</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="app">
     <header>
-      <h1 class="title">Kanban Task Board</h1>
+      <h1 class="title">Boardi</h1>
       <div class="controls">
         <button id="clearAll" class="btn-ghost">Clear All</button>
       </div>
